# psp2wpp-remote-conf

./: CMakeLists.txt  LICENSE  README.md  build.sh  build_release_dir.sh  toolchain-x86_64-w64-mingw32.cmake
resource/: imgui.ini
src/: main.cpp  psp2wpp.c  psp2wpp.h  wave.h
